✨ feat(api): Get /user, get user info via accessToken (#6)
