# shared/src/types/dto.type.ts
@@ -1,0 +1,10 @@
+export type LoginReqDto = {
+  email: string;
+  password: string;
+};
+export type LoginRespDto = {
+  accessToken: string;
+  refreshToken: string;
+  expiresIn: number;
+  tokenType: string;
+};
